# kernel-memory

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COMMUNITY.md  CONFIGURATION.md  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  Dockerfile  FAQ.md  KNOWN-ISSUES.md  KernelMemory.sln  KernelMemory.sln.DotSettings  NOTES.md  README.md  SECURITY.md  SUPPORT.md  SemanticMemory.sln  SemanticMemory.sln.DotSettings  Service.Dockerfile  Service.Dockerfile.Build.sh  Service.Dockerfile.dockerignore  azure.yaml  build.py  build.sh  clean.sh  coverage.sh  e2e-tests.sh  format.sh  km.sh  mem.slnx  nuget-package.props  nuget.config  swagger.json
clients/python/kernel-memory-cli/: README.md  pyproject.toml
clients/python/kernel-memory-cli/kernel_memory_cli/: main.py
clients/python/kernel-memory-client/: README.md  pyproject.toml
clients/python/kernel-memory-client/kernel_memory_client/: __init__.py  client.py  errors.py  types.py
clients/python/kernel-memory-client/kernel_memory_client/api/: __init__.py
clients/python/kernel-memory-client/kernel_memory_client/models/: __init__.py  citation.py  data_pipeline_status.py  data_pipeline_status_tags_type_0.py  delete_accepted.py  index_collection.py  index_details.py  memory_answer.py  memory_query.py  memory_query_args_type_0.py  memory_query_filters_type_0_item.py  partition.py  (+11 more)
clients/python/semantic-kernel-memory-plugin/: README.md  pyproject.toml
clients/python/semantic-kernel-memory-plugin/semantic_kernel_memory_plugin/: memory_plugin.py
clients/python/semantic-kernel-memory-plugin/tests/: __init__.py  test_memory_plugin.py
(+2673 files in other folders)
