[tool.poetry]
name = "semantic-kernel-memory-plugin"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
semantic-kernel = "^1.23.1"
kernel-memory-client = {path = "../kernel-memory-client"}


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
